; ModuleID = '/home/carl/AnghaBench/h2o/deps/mruby/mrbgems/mruby-bin-debugger/tools/mrdb/extr_cmdbreak.c_exe_set_command_select.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/mruby/mrbgems/mruby-bin-debugger/tools/mrdb/extr_cmdbreak.c_exe_set_command_select.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i8**, i32 }

@MRB_DEBUG_OK = common dso_local global i64 0, align 8
@BREAK_ERR_MSG_INVALIDBPNO = common dso_local global i8* null, align 8
@MRB_DEBUG_BREAK_INVALID_NO = common dso_local global i64 0, align 8
@BREAK_ERR_MSG_NOBPNO = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.TYPE_3__*, i64 (i32*, i32, i32)*)* @exe_set_command_select to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @exe_set_command_select(i32* %0, %struct.TYPE_3__* %1, i64 (i32*, i32, i32)* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i64 (i32*, i32, i32)*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %5, align 8
  store i64 (i32*, i32, i32)* %2, i64 (i32*, i32, i32)** %6, align 8
  %11 = load i64, i64* @MRB_DEBUG_OK, align 8
  store i64 %11, i64* %8, align 8
  store i64 0, i64* %9, align 8
  store i64 1, i64* %10, align 8
  br label %12

12:                                               ; preds = %58, %3
  %13 = load i64, i64* %10, align 8
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = icmp ult i64 %13, %16
  br i1 %17, label %18, label %61

18:                                               ; preds = %12
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 1
  %21 = load i8**, i8*** %20, align 8
  %22 = load i64, i64* %10, align 8
  %23 = getelementptr inbounds i8*, i8** %21, i64 %22
  %24 = load i8*, i8** %23, align 8
  store i8* %24, i8** %7, align 8
  %25 = load i8*, i8** %7, align 8
  %26 = call i64 @parse_breakpoint_no(i8* %25)
  store i64 %26, i64* %9, align 8
  %27 = load i64, i64* %9, align 8
  %28 = icmp eq i64 %27, 0
  br i1 %28, label %29, label %33

29:                                               ; preds = %18
  %30 = load i8*, i8** @BREAK_ERR_MSG_INVALIDBPNO, align 8
  %31 = load i8*, i8** %7, align 8
  %32 = call i32 (i8*, ...) @printf(i8* %30, i8* %31)
  br label %61

33:                                               ; preds = %18
  %34 = load i64 (i32*, i32, i32)*, i64 (i32*, i32, i32)** %6, align 8
  %35 = load i32*, i32** %4, align 8
  %36 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %37 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %36, i32 0, i32 2
  %38 = load i32, i32* %37, align 8
  %39 = load i64, i64* %9, align 8
  %40 = trunc i64 %39 to i32
  %41 = call i64 %34(i32* %35, i32 %38, i32 %40)
  store i64 %41, i64* %8, align 8
  %42 = load i64, i64* %8, align 8
  %43 = load i64, i64* @MRB_DEBUG_BREAK_INVALID_NO, align 8
  %44 = icmp eq i64 %42, %43
  br i1 %44, label %45, label %49

45:                                               ; preds = %33
  %46 = load i8*, i8** @BREAK_ERR_MSG_NOBPNO, align 8
  %47 = load i64, i64* %9, align 8
  %48 = call i32 (i8*, ...) @printf(i8* %46, i64 %47)
  br label %57

49:                                               ; preds = %33
  %50 = load i64, i64* %8, align 8
  %51 = load i64, i64* @MRB_DEBUG_OK, align 8
  %52 = icmp ne i64 %50, %51
  br i1 %52, label %53, label %56

53:                                               ; preds = %49
  %54 = load i64, i64* %8, align 8
  %55 = call i32 @print_api_common_error(i64 %54)
  br label %56

56:                                               ; preds = %53, %49
  br label %57

57:                                               ; preds = %56, %45
  br label %58

58:                                               ; preds = %57
  %59 = load i64, i64* %10, align 8
  %60 = add i64 %59, 1
  store i64 %60, i64* %10, align 8
  br label %12

61:                                               ; preds = %29, %12
  ret void
}

declare dso_local i64 @parse_breakpoint_no(i8*) #1

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i32 @print_api_common_error(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
